--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,13 @@
 
 .fishlist {
     background: blueviolet;
-    flex: 1, 50%;
+    flex: 1;
+    margin: 0px 30px 0px 0px;
+}
+
+header {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .fishOwned {
@@ -19,7 +25,16 @@
 
 .tips {
      background: orange;
-     flex: 1, 75%;
+     flex: 1;
+}
+
+.locations {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.places {
+    width: 30%;
 }
 
 .image {
